Added - add teams page, players page, and team page

--- a/app/src/assets/i18n/en.json
+++ b/app/src/assets/i18n/en.json
@@ -15,6 +15,10 @@
     "language": "Language",
     "spanish": "Spanish",
     "english": "English"
+  },
+  "players": {
+    "age": "Age",
+    "position": "Position"
   }
 }
 
