--- a/app/src/assets/i18n/es.json
+++ b/app/src/assets/i18n/es.json
@@ -15,6 +15,10 @@
     "language": "Idioma",
     "spanish": "Español",
     "english": "Inglés"
+  },
+  "players": {
+    "age": "Edad",
+    "position": "Posición"
   }
 }
 
